--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -7,6 +7,7 @@
       <p class="price">
         <%= number_to_currency p.price %>
       </p>
+      <%= link_to "Add to cart", add_cart_path(product_id: p) %>
     </div>
   <% end %>
 </div>
