--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <div class="alert"><%= flash[:alert] %></div>
+    <div class="notice"><%= flash[:notice] %></div>
     <%= yield %>
   </body>
 </html>
