--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Cart#index</h1>
-<p>Find me in app/views/cart/index.html.erb</p>
+<h1>My Cart</h1>
+
+<% if @cart.items.any? %>
+  <%= form_for @cart, url: cart_update_path do |f| %>
+    <ul>
+      <%= f.fields_for :items do |i| %>
+        <%= i.hidden_field :id %>
+        <li> <%= i.object.product.name %>: <%= i.text_field :quantity %></li>
+      <% end %>
+    </ul>
+    <%= f.submit "Update and continue buying" %>
+  <% end %>
+<% else %>
+  No items in your cart.
+<% end %>
