--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,6 +4,7 @@
 <% if @current_user %>
   Welcome, <%= @current_user.name %>! <%= link_to 'Log out', logout_path %>
 <% end %>
+| <%= link_to "My cart", cart_path %>
 </p>
 
 <div class="products">
