--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,9 +2,12 @@
 
 <p>
 <% if @current_user %>
-  Welcome, <%= @current_user.name %>! <%= link_to 'Log out', logout_path %>
+  Welcome, <%= @current_user.name %>! 
+  (<%= link_to 'My cart', cart_path %> |
+  <%= link_to 'Log out', logout_path %>)
+<% else %>
+  <%= link_to "Login", login_path %>
 <% end %>
-| <%= link_to "My cart", cart_path %>
 </p>
 
 <div class="products">
