Adding checkout feature

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -12,6 +12,7 @@
       <% end %>
     </ul>
     <%= f.submit "Update and continue buying" %>
+    <%= f.submit "Checkout" %>
   <% end %>
 <% else %>
   No items in your cart.
